--- a/apps/api/.air.toml
+++ b/apps/api/.air.toml
@@ -13,7 +13,7 @@ exclude_regex = ["_test.go"]
 exclude_unchanged = false
 follow_symlink = false
 full_bin = ""
-include_dir = []
+include_dir = ["pkg", "cmd"]
 include_ext = ["go", "tpl", "tmpl", "html"]
 kill_delay = "0s"
 log = "build-errors.log"
