--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^3.3.3",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "clsx": "^2.0.0",
+    "embla-carousel-react": "8.0.0-rc17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
