--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
     "react-router-dom": "^6.21.1",
+    "sonner": "^1.3.1",
     "tailwind-merge": "^2.2.0",
     "zod": "^3.22.4"
   },
