--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.1.1",
     "@hookform/resolvers": "^3.3.3",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@tanstack/react-query": "^5.15.0",
     "clsx": "^2.0.0",
     "embla-carousel-react": "8.0.0-rc17",
     "ofetch": "^1.3.3",
