--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^3.3.3",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@tanstack/react-query": "^5.15.0",
+    "@tanstack/react-query-devtools": "^5.15.0",
     "clsx": "^2.0.0",
     "embla-carousel-react": "8.0.0-rc17",
     "ofetch": "^1.3.3",
@@ -26,6 +27,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.14.6",
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.17",
