update .env.example file

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,14 +1,2 @@
-PORT=
-REDIS_URL=
-JWT_SECRET=
-DB_HOST=
-DB_NAME=
-DB_PASSWORD=
-DB_PORT=
-DB_TIMEZONE=
-DB_USER=
-DEBUG=
-EMAIL_FROM_EMAIL=
-EMAIL_FROM_NAME=
-SMTP_EMAIL=
+EMAIL=
 SMTP_PASSWORD=
