--- a/apps/api/docker-compose.yml
+++ b/apps/api/docker-compose.yml
@@ -16,6 +16,16 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_USER: postgres
       POSTGRES_DB: horizon
+  asynqmon:
+    image: hibiken/asynqmon
+    networks:
+      - redisnet
+    ports:
+      - "8080:8080"
+    environment:
+      REDIS_URL: redis://redis:6379
+    depends_on:
+      - redis
 
 networks:
   redisnet:
