--- a/apps/api/config/dev.yaml
+++ b/apps/api/config/dev.yaml
@@ -24,3 +24,6 @@ api:
   auth:
     password:
       min-security: 2
+      reset-url: "http://localhost:5173/password/reset/%s"
+    email:
+      verify-url: "http://localhost:5173/verify-email/%s"
