--- a/apps/api/config/dev.yaml
+++ b/apps/api/config/dev.yaml
@@ -22,6 +22,9 @@ api:
   logger:
     format: "time=${time_rfc3339}, method=${method}, uri=${uri}, status=${status}, error=${error}, latency=${latency_human}\n"
   auth:
+    token:
+      access-ttl: 15
+      refresh-ttl: 20160
     password:
       min-security: 2
       reset-url: "http://localhost:5173/password/reset/%s?email=%s"
