--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "embla-carousel-react": "8.0.0-rc17",
+    "lucide-react": "^0.303.0",
     "ofetch": "^1.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
