--- a/apps/api/docker-compose.yml
+++ b/apps/api/docker-compose.yml
@@ -26,6 +26,18 @@ services:
       REDIS_URL: redis://redis:6379
     depends_on:
       - redis
+  minio:
+    ports:
+        - 9000:9000
+        - 9001:9001
+    container_name: minio
+    volumes:
+        - ~/minio/data:/data
+    environment:
+        - MINIO_ROOT_USER=ROOTNAME
+        - MINIO_ROOT_PASSWORD=CHANGEME123
+    image: quay.io/minio/minio
+    command: server /data --console-address ":9001"
 
 networks:
   redisnet:
