--- a/apps/api/config/dev.yaml
+++ b/apps/api/config/dev.yaml
@@ -18,6 +18,12 @@ email:
 smtp:
   addr: smtp.gmail.com:587
   host: smtp.gmail.com
+minio:
+  user: ROOTNAME
+  password: CHANGEME123
+  endpoint: "localhost:9000"
+  bucket: default-bucket
+  location: eu-central-1
 api:
   logger:
     format: "time=${time_rfc3339}, method=${method}, uri=${uri}, status=${status}, error=${error}, latency=${latency_human}\n"
