--- a/apps/api/docker-compose.yml
+++ b/apps/api/docker-compose.yml
@@ -28,16 +28,23 @@ services:
       - redis
   minio:
     ports:
-        - 9000:9000
-        - 9001:9001
+      - 9000:9000
+      - 9001:9001
     container_name: minio
     volumes:
-        - ~/minio/data:/data
+      - ~/minio/data:/data
     environment:
-        - MINIO_ROOT_USER=ROOTNAME
-        - MINIO_ROOT_PASSWORD=CHANGEME123
+      - MINIO_ROOT_USER=ROOTNAME
+      - MINIO_ROOT_PASSWORD=CHANGEME123
     image: quay.io/minio/minio
     command: server /data --console-address ":9001"
+  inbucket:
+    container_name: inbucket
+    ports:
+      - 10000:9000
+      - 2500:2500
+      - 1100:1100
+    image: inbucket/inbucket
 
 networks:
   redisnet:
