--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,13 +18,17 @@
     "@tanstack/react-query-devtools": "^5.15.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "country-codes-list": "^1.6.11",
     "embla-carousel-react": "8.0.0-rc17",
     "lucide-react": "^0.303.0",
     "ofetch": "^1.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
+    "react-input-mask": "3.0.0-alpha.2",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.21.1",
+    "react-select": "^5.8.0",
     "sonner": "^1.3.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
@@ -35,6 +39,7 @@
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.17",
+    "@types/react-input-mask": "3.0.2",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
