--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,11 +20,14 @@
     "clsx": "^2.0.0",
     "country-codes-list": "^1.6.11",
     "embla-carousel-react": "8.0.0-rc17",
+    "i18next": "^23.7.16",
+    "i18next-http-backend": "^2.4.2",
     "lucide-react": "^0.303.0",
     "ofetch": "^1.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
+    "react-i18next": "^14.0.0",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.21.1",
     "react-select": "^5.8.0",
