--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -23,6 +23,7 @@
     "embla-carousel-react": "8.0.0-rc17",
     "i18next": "^23.7.16",
     "i18next-http-backend": "^2.4.2",
+    "localforage": "^1.10.0",
     "lucide-react": "^0.303.0",
     "ofetch": "^1.3.3",
     "react": "^18.2.0",
