--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "ES2020",
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "types": ["vitest/globals"],
     "module": "ESNext",
     "skipLibCheck": true,
 
@@ -23,6 +24,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src", "src/lib", "types.d.ts"],
+  "include": ["src", "src/lib", "types.d.ts", "src/test/setup.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
