--- a/apps/web/.prettierrc
+++ b/apps/web/.prettierrc
@@ -5,5 +5,8 @@
   "singleAttributePerLine": true,
   "singleQuote": true,
   "jsxSingleQuote": false,
-  "tabWidth": 2
+  "tabWidth": 2,
+  "plugins": ["prettier-plugin-tailwindcss"],
+  "tailwindFunctions": ["clsx", "cn", "cva"],
+  "pluginSearchDirs": false
 }
