add jaeger service definition

--- a/apps/api/docker-compose.yml
+++ b/apps/api/docker-compose.yml
@@ -46,5 +46,21 @@ services:
       - 1100:1100
     image: inbucket/inbucket
 
+  jaeger:
+    container_name: jaeger
+    environment:
+      - COLLECTOR_ZIPKIN_HOST_PORT=:9411
+    ports:
+      - 6831:6831/udp
+      - 6832:6832/udp
+      - 5778:5778
+      - 16686:16686
+      - 4317:4317
+      - 4318:4318
+      - 14250:14250
+      - 14268:14268
+      - 14269:14269
+      - 9411:9411
+    image: jaegertracing/all-in-one:1.52
 networks:
   redisnet:
