--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "ES2020",
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
-    "types": ["vitest/globals"],
+    "types": ["vitest/globals", "node"],
     "module": "ESNext",
     "skipLibCheck": true,
 
@@ -24,6 +24,12 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src", "src/lib", "types.d.ts", "src/test/setup.ts"],
+  "include": [
+    "src",
+    "src/lib",
+    "types.d.ts",
+    "src/test/setup.ts",
+    "playwright.config.ts"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
