--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -31,6 +31,7 @@
     "i18next-http-backend": "^2.4.2",
     "localforage": "^1.10.0",
     "lucide-react": "^0.303.0",
+    "million": "^2.6.4",
     "ofetch": "^1.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
