update air config

--- a/apps/api/.air.toml
+++ b/apps/api/.air.toml
@@ -7,13 +7,13 @@ args_bin = []
 bin = "./tmp/core"
 cmd = "go build -o ./tmp/core cmd/core/main.go"
 delay = 1000
-exclude_dir = ["assets", "tmp", "vendor", "testdata"]
+exclude_dir = ["assets", "tmp", "vendor", "testdata", "cmd/fake"]
 exclude_file = []
 exclude_regex = ["_test.go"]
 exclude_unchanged = false
 follow_symlink = false
 full_bin = ""
-include_dir = ["pkg", "cmd", "internal", "api", "config", "templates"]
+include_dir = ["pkg", "cmd/core", "internal", "api", "config", "templates"]
 include_ext = ["go", "tpl", "tmpl", "html"]
 kill_delay = "0s"
 log = "build-errors.log"
