--- a/apps/api/docker-compose.yml
+++ b/apps/api/docker-compose.yml
@@ -1,4 +1,5 @@
 name: horizon
+
 services:
   redis:
     image: redis:alpine
@@ -7,6 +8,7 @@ services:
       - redisnet
     ports:
       - "6379:6379"
+
   postgres:
     image: postgres
     restart: always
@@ -16,6 +18,7 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_USER: postgres
       POSTGRES_DB: horizon
+
   asynqmon:
     image: hibiken/asynqmon
     networks:
@@ -26,6 +29,7 @@ services:
       REDIS_URL: redis://redis:6379
     depends_on:
       - redis
+
   minio:
     ports:
       - 9000:9000
@@ -38,6 +42,7 @@ services:
       - MINIO_ROOT_PASSWORD=CHANGEME123
     image: quay.io/minio/minio
     command: server /data --console-address ":9001"
+
   inbucket:
     container_name: inbucket
     ports:
@@ -62,5 +67,19 @@ services:
       - 14269:14269
       - 9411:9411
     image: jaegertracing/all-in-one:1.52
+
+  elasticsearch:
+    container_name: elasticsearch
+    networks:
+      - elasticsearchnetwork
+    ports:
+      - 9200:9200
+      - 9300:9300
+    environment:
+      - discovery.type=single-node
+    image: elasticsearch:8.11.3
+
 networks:
   redisnet:
+  elasticsearchnetwork:
+    name: elasticsearchnetwork
