--- a/apps/api/docker-compose.yml
+++ b/apps/api/docker-compose.yml
@@ -70,37 +70,38 @@ services:
 
   elasticsearch:
     container_name: elasticsearch
+    image: elasticsearch:8.7.0
+    restart: always
     networks:
-      - elasticsearchnetwork
+      - elasticnet
     ports:
-      - 9200:9200
-      - 9300:9300
+      - "9200:9200"
+      - "9300:9300"
     environment:
-      - plugins.security.disabled=true
       - discovery.type=single-node
-      - http.port=9200
-      - http.cors.enabled=true
-      - http.cors.allow-origin=http://localhost:1358,http://127.0.0.1:1358
-      - http.cors.allow-headers=X-Requested-With,X-Auth-Token,Content-Type,Content-Length,Authorization
-      - http.cors.allow-credentials=true
+      - cluster.name=docker-cluster
       - bootstrap.memory_lock=true
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
+      - xpack.security.enabled=false
     volumes:
-      - ./data:/usr/share/elasticsearch/data
-    image: elasticsearch:8.11.3
-  dejavu:
-    image: appbaseio/dejavu:3.6.0
-    container_name: dejavu
+      - esdata:/usr/share/elasticsearch/data
+
+  aurora-kibana:
+    image: kibana:8.7.0
+    restart: always
+    networks:
+      - elasticnet
     ports:
-      - "1358:1358"
-    links:
+      - "5601:5601"
+    environment:
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+    depends_on:
       - elasticsearch
 
 networks:
   redisnet:
-  elasticsearchnetwork:
-    name: elasticsearchnetwork
+  elasticnet:
+    driver: bridge
+
+volumes:
+  esdata:
