--- a/apps/api/docker-compose.yml
+++ b/apps/api/docker-compose.yml
@@ -86,7 +86,7 @@ services:
     volumes:
       - esdata:/usr/share/elasticsearch/data
 
-  aurora-kibana:
+  kibana:
     image: kibana:8.7.0
     restart: always
     networks:
