--- a/apps/api/config/dev.yaml
+++ b/apps/api/config/dev.yaml
@@ -32,7 +32,7 @@ minio:
   location: eu-central-1
 api:
   logger:
-    format: "time=${time_rfc3339}, method=${method}, uri=${uri}, status=${status}, error=${error}, latency=${latency_human}\n"
+    type: file
   auth:
     token:
       access-ttl: 480
