update category service count cronjob string

--- a/apps/api/config/dev.yaml
+++ b/apps/api/config/dev.yaml
@@ -47,4 +47,4 @@ api:
     ip2locationdb: "iplocation.BIN"
     geocode: "geocode.json"
 cron:
-  category-service-count: "* * * * *"
+  category-service-count: "*/10 * * * *"
