--- a/apps/web/.prettierrc
+++ b/apps/web/.prettierrc
@@ -6,7 +6,9 @@
   "singleQuote": true,
   "jsxSingleQuote": false,
   "tabWidth": 2,
-  "plugins": ["prettier-plugin-tailwindcss"],
+  "plugins": ["prettier-plugin-tailwindcss", "@trivago/prettier-plugin-sort-imports"],
   "tailwindFunctions": ["clsx", "cn", "cva"],
-  "pluginSearchDirs": false
+  "pluginSearchDirs": false,
+  "importOrderSeparation": true,
+  "importOrderSortSpecifiers": true
 }
