remove prettier plugin

--- a/apps/web/.prettierrc
+++ b/apps/web/.prettierrc
@@ -6,7 +6,7 @@
   "singleQuote": true,
   "jsxSingleQuote": false,
   "tabWidth": 2,
-  "plugins": ["prettier-plugin-tailwindcss", "@trivago/prettier-plugin-sort-imports"],
+  "plugins": ["prettier-plugin-tailwindcss"],
   "tailwindFunctions": ["clsx", "cn", "cva"],
   "pluginSearchDirs": false,
   "importOrderSeparation": true,
