--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -11,17 +11,17 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
-    "expo": "~49.0.15",
-    "expo-status-bar": "~1.6.0",
+    "expo": "^50.0.2",
+    "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.72.6",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0"
+    "react-native": "0.73.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.14",
-    "typescript": "^5.1.3"
+    "@babel/core": "^7.23.7",
+    "@types/react": "~18.2.48",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
