update config yaml

--- a/apps/api/config/dev.yaml
+++ b/apps/api/config/dev.yaml
@@ -33,5 +33,15 @@ minio:
 api:
   logger:
     type: file
+  auth:
+    sign-key: horizon
+    google:
+      client-id: ""
+      client-secret: ""
+      callback: "http://localhost:5000/api/auth/google/callback"
+    github:
+      client-id: ""
+      client-secret: ""
+      callback: "http://localhost:5000/api/auth/github/callback"
 cron:
   category-service-count: "*/10 * * * *"
