--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,6 +21,8 @@
     "ky": "^1.6.0",
     "lucide-react": "^0.427.0",
     "next": "14.2.5",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.6",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
