--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-query-devtools": "^5.51.23",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.1.8",
     "ky": "^1.6.0",
     "lucide-react": "^0.427.0",
     "next": "14.2.5",
