--- a/apps/api/config/dev.yaml
+++ b/apps/api/config/dev.yaml
@@ -44,5 +44,8 @@ api:
       client-id: ""
       client-secret: ""
       callback: "http://localhost:5000/api/auth/github/callback"
+  search:
+    server-url: "http://localhost:8108"
+    api-key: horizon
 cron:
   category-service-count: "*/10 * * * *"
