--- a/apps/api/docker-compose.yml
+++ b/apps/api/docker-compose.yml
@@ -23,3 +23,12 @@ services:
       - MINIO_ROOT_PASSWORD=horizondev
     image: quay.io/minio/minio
     command: server /data --console-address ":9001"
+
+  typesense:
+    image: typesense/typesense:26.0
+    restart: on-failure
+    ports:
+      - "8108:8108"
+    volumes:
+      - ./typesense-data:/data
+    command: "--data-dir /data --api-key=horizon --enable-cors"
