--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,6 +28,9 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@tanstack/react-query": "^5.51.23",
     "@tanstack/react-query-devtools": "^5.51.23",
+    "@zag-js/collapsible": "^0.65.0",
+    "@zag-js/file-upload": "^0.65.0",
+    "@zag-js/react": "^0.65.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.1.8",
