--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -34,6 +34,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.1.8",
+    "instantsearch.css": "^8.4.0",
+    "instantsearch.js": "^4.73.4",
     "ky": "^1.6.0",
     "lucide-react": "^0.427.0",
     "next": "14.2.5",
@@ -43,9 +45,11 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
+    "react-instantsearch": "^7.12.4",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "typesense-instantsearch-adapter": "^2.8.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
