add shadncn and zagjs components

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-navigation-menu": "^1.2.0",
     "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
@@ -30,6 +31,7 @@
     "@tanstack/react-query-devtools": "^5.51.23",
     "@zag-js/collapsible": "^0.65.0",
     "@zag-js/file-upload": "^0.65.0",
+    "@zag-js/rating-group": "^0.65.0",
     "@zag-js/react": "^0.65.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
