--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -67,6 +67,18 @@ services:
     networks:
       - searchnet
 
+  prometheus:
+    image: prom/prometheus
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+
+  grafana:
+    image: grafana/grafana
+    ports:
+      - "3001:3000"
+
 networks:
   redisnet:
   searchnet:
