--- a/web/package.json
+++ b/web/package.json
@@ -49,6 +49,7 @@
     "react-hook-form": "^7.52.2",
     "react-instantsearch": "^7.12.4",
     "sonner": "^1.5.0",
+    "swapy": "^0.1.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "typesense-instantsearch-adapter": "^2.8.0",
