add restart policy for Docker services in docker-compose.yml

--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -35,6 +35,7 @@ services:
 
   minio:
     container_name: minio
+    restart: always
     ports:
       - 9000:9000
       - 9001:9001
@@ -49,7 +50,7 @@ services:
   typesense:
     container_name: typesense
     image: typesense/typesense:26.0
-    restart: on-failure
+    restart: always
     ports:
       - "8108:8108"
     volumes:
@@ -69,6 +70,7 @@ services:
 
   prometheus:
     image: prom/prometheus
+    restart: always
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
     ports:
@@ -76,11 +78,13 @@ services:
 
   grafana:
     image: grafana/grafana
+    restart: always
     ports:
       - "3001:3000"
 
   inbucket:
     container_name: inbucket
+    restart: always
     ports:
       - 10000:9000
       - 2500:2500
@@ -89,6 +93,7 @@ services:
 
   asynqmon:
     image: hibiken/asynqmon
+    restart: always
     networks:
       - redisnet
     ports:
